<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>


    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_fragment_country_list_root"
        android:layout_width="@dimen/search_country_dialog_width"
        android:layout_height="@dimen/search_country_dialog_height"
        android:minWidth="@dimen/search_country_dialog_width"
        android:minHeight="@dimen/search_country_dialog_height"

        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_country_field_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/search_dialog_text"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold"
            android:gravity="center"
            />
        <AutoCompleteTextView
            android:id="@+id/auto_complete_search"
            android:layout_width="0dp"
            android:layout_height="@dimen/search_country_field_height"

            android:hint="@string/search_country_hint"
            android:gravity="center"
            android:textSize="@dimen/text_size_subtitle"
            android:singleLine="true"
            android:lines="1"
            android:imeOptions="actionDone"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"

            />
<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/dialog_recycler_view"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/auto_complete_search"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            />-->

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/search_country_field_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/search_btn_text"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
