<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="globalTotalCase"
            type="com.ken.android.app.novel.covid19.report.repository.bean.GlobalTotalCase" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >


            <TextView
                android:id="@+id/global_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_subtitle"
                android:text="@string/field_title_global"
                android:textColor="#000"
                android:layout_marginStart="@dimen/field_margin"
                android:layout_marginEnd="@dimen/field_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:gravity="center_vertical"


                />
            <TextView
                android:id="@+id/update_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_title_text"
                android:text="@string/field_title_update_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/global_title"

                />

            <TextView
                android:id="@+id/update_time_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                tools:text="1099923"
                android:text="@{globalTotalCase.getDateFormatted()}"
                style="@style/field_normal_text"
                app:layout_constraintTop_toTopOf="@id/update_time_title"
                app:layout_constraintLeft_toRightOf="@id/update_time_title"
                app:layout_constraintBottom_toBottomOf="@id/update_time_title"
                />


            <TextView
                android:id="@+id/cases_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_title_text"
                android:text="@string/field_title_cases"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/update_time_title"

                />

            <TextView
                android:id="@+id/cases_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                tools:text="1099923"
                android:text="@{globalTotalCase.cases}"
                style="@style/field_normal_text"

                app:layout_constraintTop_toTopOf="@id/cases_title"
                app:layout_constraintLeft_toRightOf="@id/cases_title"
                app:layout_constraintBottom_toBottomOf="@id/cases_title"
                android:textColor="@color/blue"
                />

            <TextView
                android:id="@+id/deaths_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_title_text"
                android:text="@string/field_title_deaths"
                app:layout_constraintTop_toBottomOf="@id/cases_title"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/deaths_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="1099923"
                android:text="@{globalTotalCase.deaths}"
                app:layout_constraintTop_toTopOf="@id/deaths_title"
                app:layout_constraintLeft_toRightOf="@id/deaths_title"
                android:textColor="@color/red"
                />


            <TextView
                android:id="@+id/recovered_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_title_text"
                android:text="@string/field_title_recovered"
                app:layout_constraintTop_toBottomOf="@id/deaths_title"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/recovered_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="1099923"
                android:text="@{globalTotalCase.recovered}"
                app:layout_constraintTop_toTopOf="@id/recovered_title"
                app:layout_constraintLeft_toRightOf="@id/recovered_title"
                android:textColor="@color/green"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</layout>

