<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="country"
            type="com.ken.android.app.novel.covid19.report.repository.bean.Country" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/field_margin"

            >

            <ImageView
                android:id="@+id/country_icon"
                android:layout_width="@dimen/country_icon_width"
                android:layout_height="@dimen/country_icon_height"
                tools:src="@drawable/tw"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:bind_image="@{country.countryInfo.flag}"
                />


            <TextView
                android:id="@+id/country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_subtitle"
                tools:text="taiwan"
                android:textColor="#000"
                android:layout_marginStart="@dimen/field_margin"
                android:layout_marginEnd="@dimen/field_margin"
                app:layout_constraintLeft_toRightOf="@id/country_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/country_icon"
                android:gravity="center_vertical"
                android:text="@{country.country}"

                />
            <TextView
                android:id="@+id/update_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_title_text"
                android:text="@string/field_title_update_time"
                app:layout_constraintTop_toBottomOf="@id/country_icon"
                app:layout_constraintLeft_toLeftOf="@id/country_icon"

                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/field_margin"
                />

            <TextView
                android:id="@+id/update_time_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                tools:text="1099923"
                android:text="@{country.getDateFormatted()}"
                style="@style/field_normal_text"
                app:layout_constraintTop_toTopOf="@id/update_time_title"
                app:layout_constraintLeft_toRightOf="@id/update_time_title"

                />


            <TextView
                android:id="@+id/today_cases_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/update_time_value"
                style="@style/field_title_text"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/field_margin"
                android:text="@string/field_title_today_cases"

                />

            <TextView
                android:id="@+id/today_cases_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="121212121"
                app:layout_constraintTop_toTopOf="@id/today_cases_title"
                app:layout_constraintLeft_toRightOf="@id/today_cases_title"
                app:layout_constraintBottom_toBottomOf="@id/today_cases_title"
                android:textColor="@color/blue"

                android:text="@{country.todayCases}"
                />


            <TextView
                android:id="@+id/today_deaths_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/today_cases_value"
                app:layout_constraintTop_toTopOf="@id/today_cases_title"
                style="@style/field_title_text"
                android:text="@string/field_title_today_deaths"
                />
            <TextView
                android:id="@+id/today_deaths_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="0"
                app:layout_constraintTop_toTopOf="@id/today_deaths_title"
                app:layout_constraintLeft_toRightOf="@id/today_deaths_title"
                app:layout_constraintBottom_toBottomOf="@id/today_deaths_title"
                android:textColor="@color/red"

                android:text="@{country.todayDeaths}"
                />

            <TextView
                android:id="@+id/cases_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/today_deaths_title"
                style="@style/field_title_text"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/field_margin"
                android:text="@string/field_title_cases"
                />
            <TextView
                android:id="@+id/cases_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="0"
                app:layout_constraintTop_toTopOf="@id/cases_title"
                app:layout_constraintLeft_toRightOf="@id/cases_title"
                app:layout_constraintBottom_toBottomOf="@id/cases_title"

                android:text="@{country.cases}"
                android:textColor="@color/blue"
                />

            <TextView
                android:id="@+id/deaths_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/cases_value"
                app:layout_constraintTop_toTopOf="@id/cases_title"
                style="@style/field_title_text"
                android:text="@string/field_title_deaths"
                />
            <TextView
                android:id="@+id/deaths_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="0"
                app:layout_constraintTop_toTopOf="@id/deaths_title"
                app:layout_constraintLeft_toRightOf="@id/deaths_title"
                app:layout_constraintBottom_toBottomOf="@id/deaths_title"
                android:text="@{country.deaths}"
                android:textColor="@color/red"
                />

            <TextView
                android:id="@+id/recovered_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deaths_title"
                style="@style/field_title_text"
                android:layout_marginStart="0dp"
                android:layout_marginTop="@dimen/field_margin"
                android:text="@string/field_title_recovered"
                />
            <TextView
                android:id="@+id/recovered_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="0"
                app:layout_constraintTop_toTopOf="@id/recovered_title"
                app:layout_constraintLeft_toRightOf="@id/recovered_title"
                app:layout_constraintBottom_toBottomOf="@id/recovered_title"
                android:textColor="@color/green"
                android:text="@{country.recovered}"
                />

            <TextView
                android:id="@+id/critical_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/recovered_value"
                app:layout_constraintTop_toTopOf="@id/recovered_value"
                style="@style/field_title_text"
                android:text="@string/field_title_critical"
                />
            <TextView
                android:id="@+id/critical_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/field_normal_text"
                tools:text="0"
                app:layout_constraintTop_toTopOf="@id/critical_title"
                app:layout_constraintLeft_toRightOf="@id/critical_title"
                app:layout_constraintBottom_toBottomOf="@id/critical_title"
                android:textColor="@color/red_880000"
                android:text="@{country.critical}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>
