<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="properties"
            type="com.ken.android.app.novel.covid19.report.repository.bean.Properties" />


    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/pharmacy_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/mask_field_min_width"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                android:text="@{properties.name}"
                tools:text="藥局"
                android:layout_margin="@dimen/field_margin"
                android:textSize="@dimen/text_size_subtitle"
                />


            <TextView
                android:id="@+id/mask_adult_field_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/mask_field_min_width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pharmacy_name"
                android:text="@string/tw_mask_map_mask_adult_amount_field_title"
                android:layout_margin="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"

                />

            <TextView
                android:id="@+id/mask_adult_field_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/mask_adult_field_title"
                app:layout_constraintTop_toTopOf="@id/mask_adult_field_title"
                android:layout_marginLeft="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"
                tools:text="9999"
                android:text="@{``+properties.mask_adult}"
                android:maxWidth="@dimen/mask_field_value_max_width"
                />

            <TextView
                android:id="@+id/mask_child_field_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/mask_field_min_width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mask_adult_field_value"
                android:text="@string/tw_mask_map_mask_child_amount_field_title"
                android:layout_margin="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"
                />

            <TextView
                android:id="@+id/mask_child_field_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/mask_child_field_title"
                app:layout_constraintTop_toTopOf="@id/mask_child_field_title"
                android:layout_marginLeft="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"
                tools:text="9999"
                android:text="@{``+properties.mask_child}"
                android:maxWidth="@dimen/mask_field_value_max_width"
                />


            <TextView
                android:id="@+id/pharmacy_address_field_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/mask_field_min_width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mask_child_field_value"
                android:text="@string/tw_mask_map_pharmacy_address_field_title"
                android:layout_margin="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/pharmacy_address_field_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/pharmacy_address_field_title"
                app:layout_constraintTop_toTopOf="@id/pharmacy_address_field_title"
                android:layout_margin="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"
                tools:text="9999"
                android:text="@{properties.address}"

                />


            <TextView
                android:id="@+id/pharmacy_phone_number_field_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/mask_field_min_width"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pharmacy_address_field_value"
                android:text="@string/tw_mask_map_pharmacy_phone_number_field_title"
                android:layout_margin="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/pharmacy_phone_number_field_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/pharmacy_phone_number_field_title"
                app:layout_constraintTop_toTopOf="@id/pharmacy_phone_number_field_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/field_margin"
                android:textSize="@dimen/text_size_normal_text"
                tools:text="9999"
                android:text="@{properties.phone}"

                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>